[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/menu/options_menu/video_section/resolution_widget/ResolutionWidget.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/menu/options_menu/video_section/VideoSection.gd" type="Script" id=2]
[ext_resource path="res://scenes/menu/options_menu/video_section/fullscreen_widget/FullscreenWidget.tscn" type="PackedScene" id=3]

[node name="VideoSection" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ResolutionWidget" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 20.0

[node name="FullscreenWidget" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 48.0

[connection signal="resolution_changed" from="ResolutionWidget" to="." method="_on_resolution_changed"]
[connection signal="fullscreen_changed" from="FullscreenWidget" to="." method="_on_FullscreenWidget_fullscreen_changed"]
